--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "index.js",
+            "src": "index.html",
             "use": "@now/node"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "index.js"
+            "dest": "index.html"
         }
     ]
 }
