--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,8 @@
-
 {
-    "version": 2,
-    "builds": [
+    "rewrites": [
         {
-            "src": "index.html",
-            "use": "@now/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.html"
+            "source": "/(.*)",
+            "destination": "index.html"
         }
     ]
 }
