--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,3 @@
 {
-    "rewrites": [
-        {
-            "source": "index.html",
-            "destination": "index.html"
-        }
-    ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
